--- a/tenant/tottocraft - Copy (2).html
+++ b/tenant/tottocraft - Copy (2).html
@@ -111,6 +111,19 @@ www.4happy-studio.com -->
   background-size: cover; 
   padding-bottom: 200px;
 }
+.carousel-caption {
+width:200px;
+font-size: 12px;
+z-index:10;
+color:#fff;
+text-align:center;
+top:40%;
+left:15%;
+bottom:auto;
+-webkit-transform:translate(0, -50%);
+-ms-transform:translate(0, -50%);
+transform:translate(0, -50%);
+}
 </style>
 
 
@@ -144,55 +157,97 @@ www.4happy-studio.com -->
       </div>
       
       <div class="card-body">
-        <h5 class="card-title">Lina Sukijo</h5>
+        <h5 class="card-title">Totto Craft</h5>
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6532.png" alt="First slide">
-              <div class="carousel-caption d-none d-md-block">
-                <h5></h5>
+              <img class="d-block w-100" src="/assets/img//Totto Craft/Kaligrafi Syahadad.png" alt="First slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5>Kaligrafi Syahadad</h5>
+                <p>Kaligrafi Syahadad</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Totto Craft/Kaligrafi Bismillah.png" alt="Second slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5>Kaligrafi Bismillah</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6538.png" alt="Second slide">
-              <div class="carousel-caption d-none d-md-block">
-                <h5></h5>
+              <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Ikan Marlin.png" alt="Third slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5>Batik Tulis Motif Ikan Marlin</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6542.png" alt="Third slide">
-              <div class="carousel-caption d-none d-md-block">
-                <h5></h5>
+              <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Ubur-Ubur.png" alt="Fourth slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5>Batik Tulis Motif Ubur-Ubur</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6549.png" alt="Fourth slide">
-              <div class="carousel-caption d-none d-md-block">
-                <h5></h5>
+              <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Gong-gong dan Rumput Laut.png" alt="Five slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5>Batik Tulis Motif Gong-gong dan Rumput Laut</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6553.png" alt="Five slide">
-              <div class="carousel-caption d-none d-md-block">
-                <h5></h5>
+              <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Gong-gong dan Bunga Kundur.png" alt="Six slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5>Batik Tulis Motif Gong-gong dan Bunga Kundur</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6561.png" alt="Six slide">
-              <div class="carousel-caption d-none d-md-block">
-                <h5></h5>
+              <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Abstract Kontemporer.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5>Batik Tulis Motif Abstract Kontemporer</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6563.png" alt="Seven slide">
-              <div class="carousel-caption d-none d-md-block">
-                <h5></h5>
+              <img class="d-block w-100" src="/assets/img/Totto Craft/Lukisan Batik 2 Arwana.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5>Lukisan Batik 2 Arwana</h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Totto Craft/Lukisan Batik Gong-gong.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5>Lukisan Batik Gong-gong</h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Totto Craft/Lukisan Batik Bunga Teratai.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5>Lukisan Batik Bunga Teratai</h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Totto Craft/Kaligrafi Batik Arwana.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5>Kaligrafi Batik Arwana</h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Totto Craft/Kaligrafi Lafas Muhammad.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5>Kaligrafi Lafas Muhammad</h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Totto Craft/Kaligrafi Lafas Allah.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5>Kaligrafi Lafas Allah</h5>
                 <p></p>
               </div>
             </div>
