--- a/tenant/naluna.html
+++ b/tenant/naluna.html
@@ -152,102 +152,46 @@ transform:translate(0, -50%);
     <div class="card text-center">
       <div class="card-header">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://drive.google.com/file/d/1cy5WkmuZcUFwG7vM_nuovHHtt3Jz9kuz/preview" allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://drive.google.com/file/d/1TRq_v2WPUobJ3mL_X2prr8HWm5bVjPAk/preview" allowfullscreen></iframe>
         </div>
       </div>
       
       <div class="card-body">
-        <h5 class="card-title">Totto Craft</h5>
+        <h5 class="card-title">Naluna Style</h5>
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="/assets/img//Totto Craft/Kaligrafi Syahadad.png" alt="First slide">
+              <img class="d-block w-100" src="/assets/img/Naluna/IMG_6150_compressed.png" alt="First slide">
               <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
-                <h5>Kaligrafi Syahadad</h5>
-                <p>Kaligrafi Syahadad</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Totto Craft/Kaligrafi Bismillah.png" alt="Second slide">
-              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
-                <h5>Kaligrafi Bismillah</h5>
+                <h5>Note book</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Ikan Marlin.png" alt="Third slide">
+              <img class="d-block w-100" src="/assets/img/Naluna/IMG_6161_compressed.png" alt="Second slide">
               <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
-                <h5>Batik Tulis Motif Ikan Marlin</h5>
+                <h5>Kerudung</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Ubur-Ubur.png" alt="Fourth slide">
+              <img class="d-block w-100" src="/assets/img/Naluna/IMG_6175_compressed.png" alt="Third slide">
               <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
-                <h5>Batik Tulis Motif Ubur-Ubur</h5>
+                <h5>Blazer</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Gong-gong dan Rumput Laut.png" alt="Five slide">
+              <img class="d-block w-100" src="/assets/img/Naluna/IMG_6186_compressed.png" alt="Fourth slide">
               <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
-                <h5>Batik Tulis Motif Gong-gong dan Rumput Laut</h5>
+                <h5>Tote Bag</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Gong-gong dan Bunga Kundur.png" alt="Six slide">
+              <img class="d-block w-100" src="/assets/img/Naluna/IMG_6192_compressed.png" alt="Five slide">
               <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
-                <h5>Batik Tulis Motif Gong-gong dan Bunga Kundur</h5>
-                <p></p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Abstract Kontemporer.png" alt="Seven slide">
-              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
-                <h5>Batik Tulis Motif Abstract Kontemporer</h5>
-                <p></p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Totto Craft/Lukisan Batik 2 Arwana.png" alt="Seven slide">
-              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
-                <h5>Lukisan Batik 2 Arwana</h5>
-                <p></p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Totto Craft/Lukisan Batik Gong-gong.png" alt="Seven slide">
-              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
-                <h5>Lukisan Batik Gong-gong</h5>
-                <p></p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Totto Craft/Lukisan Batik Bunga Teratai.png" alt="Seven slide">
-              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
-                <h5>Lukisan Batik Bunga Teratai</h5>
-                <p></p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Totto Craft/Kaligrafi Batik Arwana.png" alt="Seven slide">
-              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
-                <h5>Kaligrafi Batik Arwana</h5>
-                <p></p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Totto Craft/Kaligrafi Lafas Muhammad.png" alt="Seven slide">
-              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
-                <h5>Kaligrafi Lafas Muhammad</h5>
-                <p></p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Totto Craft/Kaligrafi Lafas Allah.png" alt="Seven slide">
-              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
-                <h5>Kaligrafi Lafas Allah</h5>
+                <h5>Gamis</h5>
                 <p></p>
               </div>
             </div>
@@ -262,8 +206,8 @@ transform:translate(0, -50%);
           </a>
         </div>
         
-        <p style="padding-top: 20px;" class="card-text">Madinah Hijab Syar’i Premium</p>
-        <a href="#" class="btn btn-warning">Beli Disini</a>
+        <p style="padding-top: 20px;" class="card-text">Naluna Style</p>
+        <a href="https://shopee.co.id/nalunastyle?v=924&smtt=0.0.3" class="btn btn-warning">Beli Disini</a>
         <a href="#" class="btn btn-success">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
